added bibtex for ESMF

--- a/02_introduction.tex
+++ b/02_introduction.tex
@@ -1,4 +1,4 @@
-\chapter{Introduction}
+\chapter{Introduction} \label{chap:introduction}
 \par
 Modern information and communication technologies are widely used in almost every field.  It has also influenced the environmental science. Using the power of the new technologies, it is possible to create high quality models, simulations and decision support systems to help environmental scientists improve their research. Environmental modelling is the simplified view of the complex environmental realities. It represents the environmental objects, natural phenomena and physical processes in a logical way. It formalizes the principles of natural sciences to interpret the natural reality. Nowadays, modelling the complex environmental phenomena remains a great challenge. We need to consider the different dimensions and amount of data, structures of different sub components, scalability and adaptability of our models.
 \par
@@ -10,7 +10,7 @@ To overcome the disadvantages of the available model frameworks, domain specific
 \par
 The following section describes the project goals which aims to solve these problems. Furthermore, the various features of the solution will be described in the 
 %TODO ref 
-section vision for a dsl. After that the priorities of the project goals will be defined. 
+section vision for a DSL. After that the priorities of the project goals will be defined. 
 %TODO übergang passt nicht
 
 \section{Project Goals}
@@ -104,7 +104,8 @@ The following order was defined:
 \par
 As a result of the lack of  modelling experience in general and especially the lack of experience with modeling environments it was not possible to implement a DSL that fulfills the above mentioned requirements immediately. The idea was to look at existing modelling frameworks in a first step and afterwards to implement lightweight and easy to understand models with these frameworks to gain experience in modeling on the one hand and to investigate them on strengths and weaknesses on the other hand. Based on this knowledge it should be much easier to define a DSL which integrates the required features. The next chapter gives a rough overview of existing modelling frameworks and examines its strengths and weaknesses regarding the needed features.
 
-
+%TODO existing model environments fehlt noch
+%TODO bei similie daran denken Bos version zu benutzen
 
 
 
