--- a/05_conclusion.tex
+++ b/05_conclusion.tex
@@ -6,8 +6,8 @@ Before discussing the feasibility of the single aspects we have outlined so far,
 Environmental modelers are nowadays forced, to implement their models with standard programming languages. Since they are often not familiar with designing and handling large software projects and the programming itself, this is a very time consuming process. This leads to poor implemented models, that are inefficient, not stable and not exchangeable.
 \par
 The underlying and fundamental issue with this current modeling workflow is, that modelers aren’t able to concentrate on their origin task the modeling, since they don't have tools that allow the implementation in a modeler friendly way. Therefore we outlined, based on the ideas of Athanasiadis and summarized in 
-%TODO ref to chapter
- chapter XX, a modeling workflow that makes use of an highly customized IDE. This IDE and the tools it encompasses could bridge the gap of modelers origin intention and the tool support that is needed (see chapterXX ).
+%TODO ref to chapter with name? oder eher auf section?
+ chapter XX, a modeling workflow that makes use of an highly customized IDE. This IDE and the tools it encompasses could bridge the gap of modelers origin intention and the tool support that is needed (see chapter \ref{chap:toolchain} ).
 %TODO ref to chapter
 \par
 After this more overlooking chapter, we have discussed several ways how the very crucial points of this IDE, the DSL and its connection to the ontology, could be solved. To complete things,we want to summarize and discuss our thoughts on the feasibility of the requirements, the ideas mentioned outlining a toolchain and approaches of DSL creation and ontology connection in the following section. After that, we want to give some personal notes to the project procedure itself. 
