--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -38,24 +38,24 @@
 
 @report{dsl:ocelet-doyouspeek,
 	title={Modelling the environment using graphs with behaviour: do you speak Ocelet?},
-	author={P. Degenne, A. Ait Lahcen, O. Curé, R. Forax, D. Parigot, D. Lo Seen},
+	author={P. Degenne and A. Ait Lahcen and O. Curé and R. Forax and D. Parigot and D. Lo Seen},
 	year={2010}
 }
 
 @inproceedings{dsl:ocelet-onto,
- author = {Cur{\'e}, Olivier and Forax, R{\'e}mi and Degenne, Pascal and Seen, Danny Lo and Parigot, Didier and Lahcen, Ayoub Ait},
- title = {Ocelet: An Ontology-Based Domain Specific Language to Model Complex Domains},
- booktitle = {Proceedings of the 2010 Third International Conference on Communication Theory, Reliability, and Quality of Service},
- series = {CTRQ '10},
- year = {2010},
- isbn = {978-0-7695-4070-2},
- pages = {255--260},
- numpages = {6},
- url = {http://dx.doi.org/10.1109/CTRQ.2010.50},
- doi = {10.1109/CTRQ.2010.50},
- acmid = {1845710},
- publisher = {IEEE Computer Society},
- address = {Washington, DC, USA},
+	 author = {Cur{\'e}, Olivier and Forax, R{\'e}mi and Degenne, Pascal and Seen, Danny Lo and Parigot, Didier and Lahcen, Ayoub Ait},
+	 title = {Ocelet: An Ontology-Based Domain Specific Language to Model Complex Domains},
+	 booktitle = {Proceedings of the 2010 Third International Conference on Communication Theory, Reliability, and Quality of Service},
+	 series = {CTRQ '10},
+	 year = {2010},
+	 isbn = {978-0-7695-4070-2},
+	 pages = {255--260},
+	 numpages = {6},
+	 url = {http://dx.doi.org/10.1109/CTRQ.2010.50},
+	 doi = {10.1109/CTRQ.2010.50},
+	 acmid = {1845710},
+	 publisher = {IEEE Computer Society},
+	 address = {Washington, DC, USA},
 } 
 
 @article{dsl:mernik,
@@ -82,9 +82,145 @@
 	title = {Bank Account},
 	author = {Robert Muetzelfeldt}
 }
+
 @Unpublished{dsl:muetzelfeldt,
 	title = {Declarative modelling in ecological and environmental research.},
 	author = {Robert Muetzelfeldt},
 	year = 2004
 }
+
+@online{dsl:esmf-homepage,
+	title={ESMF: Earth System Modeling Framework},
+  	author={Team ESMF},
+	urldate={2013-02-14},
+	url={http://www.earthsystemmodeling.org/},
+	year={2013}
+}
+
+@online{dsl:esmf-free_lib,
+	title={Search for ESMF},
+  	author={The Free Library},
+	urldate={2013-02-14},
+	url={http://www.thefreelibrary.com/_/search/Search.aspx?By=0&SearchBy=0&Word=ESMF},
+	year={2013}
+}
+
+@online{dsl:esmf-free_lib,
+	title={Search for ESMF},
+  	author={The Free Library},
+	urldate={2013-02-14},
+	url={http://www.thefreelibrary.com/_/search/Search.aspx?By=0&SearchBy=0&Word=ESMF},
+	year={2013}
+}
+
+@InCollection{dsl:esmf-tutorial1,
+	title = {ESMF Early Adopters ``Tutorial Examples''},
+	author = {Chris Hill},
+	booktitle = {ESMF Community Meeting},
+	publisher = {Boulder},
+	year={2004}
+}
+
+@online{dsl:esmf-overview,
+	title={ESMF Overview},
+  	author={Team ESMF},
+	urldate={2013-02-27},
+	url={http://www.earthsystemmodeling.org/esmf_releases/non_public/ESMF_3_1_0p1/ESMF_refdoc/node2.html}
+}
+
+@online{dsl:esmf-superstructure,
+	title={ESMF Superstructure},
+  	author={Team ESMF},
+	urldate={2013-02-27},
+	url={http://www.earthsystemmodeling.org/esmf_releases/non_public/ESMF_3_1_0p1/ESMF_refdoc/node2.html}
+}
+
+@Unpublished{dsl:esmf-noaa,
+	title = {NOAA Environmental Software Infrastructure and Interoperability Program},
+	author = {Cecelia DeLuca and Sylvia Murphy and V. Balaj},
+	year = 2009
+}
+
+@Manual{dsl:esmf-tutorial2,
+	title = {Introduction to the Earth System Modeling Framework},
+	author= {Don Stark and Gerhard Theurich and Shujia Zhou},
+	year = 2004
+}
+
+@InProceedings{dsl:esmf-enhancements,
+	title = {Enhancements for Hydrological Modeling in ESMF},
+	booktitle = {Fall Meeting},
+	author = {Cecelia DeLuca},
+	year = 2008
+}
+
+@online{dsl:esmf-regridding,
+	title={Regridding Status},
+  	author={Team ESMF},
+	urldate={2013-03-14},
+	url={http://www.earthsystemmodeling.org/esmf_releases/last/regridding_status.html},
+}
+
+@online{dsl:esmf-ncl_regridding,
+	title={Script templates for NCL regridding and graphics},
+  	author={Team NCAR Command Language},
+	urldate={2013-03-14},
+	url={http://www.ncl.ucar.edu/Applications/Templates/},
+}
+
+@article{dsl:esmf-fortran,
+	  added-at = {2007-11-27T00:00:00.000+0100},
+	  author = {Erwig, Martin and Fu, Zhe and Pflaum, Ben},
+	  biburl = {http://www.bibsonomy.org/bibtex/2e249380acb313329f4f3ed1a4ec9246e/dblp},
+	  date = {2007-11-27},
+	  description = {dblp},
+	  ee = {http://dx.doi.org/10.1002/smr.346},
+	  interhash = {e0de0353a07abb7f62f3008708dfac76},
+	  intrahash = {e249380acb313329f4f3ed1a4ec9246e},
+	  journal = {Journal of Software Maintenance},
+	  keywords = {dblp},
+	  number = 3,
+	  pages = {155-182},
+	  timestamp = {2007-11-27T00:00:00.000+0100},
+	  title = {Parametric Fortran: program generation in scientific computing.},
+	  url = {http://dblp.uni-trier.de/db/journals/smr/smr19.html#ErwigFP07},
+	  volume = 19,
+	  year = 2007
+}
+
+@Book{dsl:esmf-graphical,
+	title = {A Graphical Development Tool for Earth System Model Using Component Description Language},
+	year = 2012,
+	publisher = {IARIA}
+	author = {Chao Tan and Sujun Cheng and Zhongzhi Luan and Si Ye and Wenjun Li andDepei Qian}
+}
+
+@online{dsl:esmf-coupling,
+	title={From Coupling Frameworks to Domain-Specific Languages},
+  	author={Rocky Dunlap},
+	year = 2012,
+	urldate={2013-04-19},
+	url={http://rockydunlap.wordpress.com/2012/05/02/from-coupling-frameworks-to-domain-specific-languages/}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
