--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -203,7 +203,45 @@
 	url={http://rockydunlap.wordpress.com/2012/05/02/from-coupling-frameworks-to-domain-specific-languages/}
 }
 
+@InProceedings{dsl:oms-david,
+	title = {Rethinking Modeling Framework Design: Object Modeling System 3.0 },
+	booktitle = {iEMSs 2010},
+	author = {O. David and J.C. Ascough and G.H. Leavesley and L. Ahuja}
+	year = 2010
+}
 
+@InProceedings{dsl:oms-ascough,
+	title = {Development and Evaluation of a component-based watershed model using the Object Modeling System},
+	booktitle = {2nd Joint Federal Interagency Conference},
+	author = {James C. Ascough II and Olaf David and George H. Leavesley and Peter Krause and Sven Kralisch and Lajpat R. Ahuja}
+	year = 2010
+}
+
+@online{dsl:oms-wiki,
+	title={What is OMS?},
+  	author={Team OMS},
+	year = 2008,
+	urldate={2013-04-19},
+	url={http://www.javaforge.com/wiki/57375}
+}
+
+@online{dsl:oms-component_based,
+	title={Component-based software engineering},
+	author={Wikipedias}
+	urldate={2013-04-19},
+	url={http://en.wikipedia.org/wiki/Software_componentry}
+}
+
+@Article{dsl:oms-ahuja,
+	AUTHOR = {Ahuja, L. R. and Ascough II, J. C. and David, O.},
+	TITLE = {Developing natural resource models using the object modeling system: feasibility and challenges},
+	JOURNAL = {Advances in Geosciences},
+	VOLUME = {4},
+	YEAR = {2005},
+	PAGES = {29--36},
+	URL = {http://www.adv-geosci.net/4/29/2005/},
+	DOI = {10.5194/adgeo-4-29-2005}
+}
 
 
 
