added bibtex for similie

--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -243,7 +243,42 @@
 	DOI = {10.5194/adgeo-4-29-2005}
 }
 
+@online{dsl:simile-simulistics,
+	title={Simulistics},
+	author={Simulistics}
+	urldate={2013-04-19},
+	url={http://www.simulistics.com/}
+}
 
+@article {dsl:simile-muetzelfeldt,
+	title = {The Simile visual modelling environment.},
+	journal = {European Journal of Agronomy},
+	volume = {18},
+	year = {2003},
+	pages = {345-358 },
+	url = {http://www.simulistics.com/files/documents/SimilePaper.pdf},
+	author = {Muetzelfeldt, R. I and Massheder, J.}
+}
+
+@online{dsl:simile-simulistics,
+	title={Modelling approaches},
+	author={Simulistics}
+	urldate={2013-04-19},
+	url={http://www.simulistics.com/tour/paradigms.htm}
+}
+
+@article {dsl:simile-know,
+	title = {Getting to know Simile the visual modelling environment for ecological, biological and environmental research},
+	year = {2003},
+	pages = {345-358 },
+	url = {http://www.simulistics.com/files/documents/SimilePaper.pdf},
+	author = {Muetzelfeldt, R. I and Massheder, J.}
+}
+
+@Manual{dsl:simile-know,
+	title = {Getting to know Simile the visual modelling environment for ecological, biological and environmental research},
+	author = Robert Muetzelfeldt and Jasper Taylor
+}
 
 
 
