added forgotten commas in bib

--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -191,7 +191,7 @@
 @Book{dsl:esmf-graphical,
 	title = {A Graphical Development Tool for Earth System Model Using Component Description Language},
 	year = 2012,
-	publisher = {IARIA}
+	publisher = {IARIA},
 	author = {Chao Tan and Sujun Cheng and Zhongzhi Luan and Si Ye and Wenjun Li andDepei Qian}
 }
 
@@ -206,14 +206,14 @@
 @InProceedings{dsl:oms-david,
 	title = {Rethinking Modeling Framework Design: Object Modeling System 3.0 },
 	booktitle = {iEMSs 2010},
-	author = {O. David and J.C. Ascough and G.H. Leavesley and L. Ahuja}
+	author = {O. David and J.C. Ascough and G.H. Leavesley and L. Ahuja},
 	year = 2010
 }
 
 @InProceedings{dsl:oms-ascough,
 	title = {Development and Evaluation of a component-based watershed model using the Object Modeling System},
 	booktitle = {2nd Joint Federal Interagency Conference},
-	author = {James C. Ascough II and Olaf David and George H. Leavesley and Peter Krause and Sven Kralisch and Lajpat R. Ahuja}
+	author = {James C. Ascough II and Olaf David and George H. Leavesley and Peter Krause and Sven Kralisch and Lajpat R. Ahuja},
 	year = 2010
 }
 
@@ -227,7 +227,7 @@
 
 @online{dsl:oms-component_based,
 	title={Component-based software engineering},
-	author={Wikipedias}
+	author={Wikipedia},
 	urldate={2013-04-19},
 	url={http://en.wikipedia.org/wiki/Software_componentry}
 }
@@ -245,7 +245,7 @@
 
 @online{dsl:simile-simulistics,
 	title={Simulistics},
-	author={Simulistics}
+	author={Simulistics},
 	urldate={2013-04-19},
 	url={http://www.simulistics.com/}
 }
@@ -262,7 +262,7 @@
 
 @online{dsl:simile-simulistics,
 	title={Modelling approaches},
-	author={Simulistics}
+	author={Simulistics},
 	urldate={2013-04-19},
 	url={http://www.simulistics.com/tour/paradigms.htm}
 }
@@ -277,7 +277,7 @@
 
 @Manual{dsl:simile-know,
 	title = {Getting to know Simile the visual modelling environment for ecological, biological and environmental research},
-	author = Robert Muetzelfeldt and Jasper Taylor
+	author = {Robert Muetzelfeldt and Jasper Taylor}
 }
 
 
