--- a/02_introduction.tex
+++ b/02_introduction.tex
@@ -108,6 +108,11 @@ As a result of the lack of  modelling experience in general and especially the l
 %TODO bei similie daran denken Bos version zu benutzen
 
 
+\input{esmf}
+
+\input{similie}
+
+
 
 
 
