--- a/02_introduction.tex
+++ b/02_introduction.tex
@@ -109,9 +109,9 @@ As a result of the lack of  modelling experience in general and especially the l
 
 \section{Existing Environmental Modelling Frameworks}
 
-\input{similie}
-\input{esmf}
-\input{oms}
+\input{02a_similie}
+\input{02b_esmf}
+\input{02c_oms}
 
 
 
