doppelter eintrag entfernt

--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -105,13 +105,6 @@
 	year={2013}
 }
 
-@online{dsl:esmf-free_lib,
-	title={Search for ESMF},
-  	author={The Free Library},
-	urldate={2013-02-14},
-	url={http://www.thefreelibrary.com/_/search/Search.aspx?By=0&SearchBy=0&Word=ESMF},
-	year={2013}
-}
 
 @InCollection{dsl:esmf-tutorial1,
 	title = {ESMF Early Adopters ``Tutorial Examples''},
@@ -281,10 +274,46 @@
 }
 
 
+@article{Jakeman2006602,
+title = "Ten iterative steps in development and evaluation of environmental models ",
+journal = "Environmental Modelling & Software ",
+volume = "21",
+number = "5",
+pages = "602 - 614",
+year = "2006",
+note = "",
+issn = "1364-8152",
+doi = "10.1016/j.envsoft.2006.01.004",
+url = "http://www.sciencedirect.com/science/article/pii/S1364815206000107",
+author = "A.J. Jakeman and R.A. Letcher and J.P. Norton",
+keywords = "Model testing",
+keywords = "Verification",
+keywords = "Uncertainty",
+keywords = "Sensitivity",
+keywords = "Integrated assessment",
+keywords = "System identification "
+}
 
 
-
-
+@article{Villa2009577,
+title = "Modelling with knowledge: A review of emerging semantic approaches to environmental modelling ",
+journal = "Environmental Modelling & Software ",
+volume = "24",
+number = "5",
+pages = "577 - 587",
+year = "2009",
+note = "",
+issn = "1364-8152",
+doi = "10.1016/j.envsoft.2008.09.009",
+url = "http://www.sciencedirect.com/science/article/pii/S1364815208001540",
+author = "Ferdinando Villa and Ioannis N. Athanasiadis and Andrea Emilio Rizzoli",
+keywords = "Semantic modelling",
+keywords = "Ontologies",
+keywords = "Semantic annotation",
+keywords = "Model and data integration",
+keywords = "Conceptual design",
+keywords = "Model-based query "
+}
 
 
 
