added references for chapter toolchain

--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -315,12 +315,64 @@ keywords = "Conceptual design",
 keywords = "Model-based query "
 }
 
+@Article{adgeo-4-69-2005,
+AUTHOR = {Blind, M. and Gregersen, J. B.},
+TITLE = {Towards an Open Modelling Interface (OpenMI) the HarmonIT project},
+JOURNAL = {Advances in Geosciences},
+VOLUME = {4},
+YEAR = {2005},
+PAGES = {69--74},
+URL = {http://www.adv-geosci.net/4/69/2005/},
+DOI = {10.5194/adgeo-4-69-2005}
+}
 
+@online{toolchain:ems-model-calibration,
+	title={model calibration},
+	author={EMS},
+	urldate={2013-04-20},
+	url={http://www.ems-i.com/gmshelp/Model_Calibration/Model_Calibration.htm}
+}
 
+@online{toolchain:ems-pram-estimation,
+	title={Automated Parameter Estimation},
+	author={EMS},
+	urldate={2013-04-20},
+	url={http://www.ems-i.com/gmshelp/Model_Calibration/Parameter_Estimation/Automated_Parameter_Estimation.htm}
+}
 
+@online{toolchain:ems-pram-estimation,
+	title={Automated Parameter Estimation},
+	author={EMS},
+	urldate={2013-04-20},
+	url={http://www.ems-i.com/gmshelp/Model_Calibration/Parameter_Estimation/Automated_Parameter_Estimation.htm}
+}
 
+@online{toolchain:gms-overview,
+	title={GMS 6.5 Overview},
+	author={EMS},
+	urldate={2013-04-20},
+	url={http://www.ems-i.com/GMS/GMS_Overview/gms_overview.html}
+}
 
+@Article{nasa_sweet_guide,
+AUTHOR = {R. Raskin},
+TITLE = {Guide to SWEET Ontologies},
+URL = {sweet.jpl.nasa.gov/guide.doc}
+}
 
+@online{toolchain:nasa_sweet,
+	title={Semantic Web for Earth and Environmental Terminology},
+	author={Rob Raskin},
+	urldate={2013-04-20},
+	url={http://sweet.jpl.nasa.gov/ontology/}
+}
+
+@online{toolchain:qudt,
+	title={QUDT - Quantities, Units, Dimensions and Data Types in OWL and XML},
+	author={Ralph Hodgson and Paul J. Keller },
+	urldate={2013-04-20},
+	url={http://qudt.org}
+}
 
 
 
