--- a/header.tex
+++ b/header.tex
@@ -133,6 +133,26 @@ includehead,includefoot
 	pdfstartview=FitB 
 }
 
+%-----Code-Schnipsel---
+\usepackage{listings}
+\definecolor{bluekeywords}{rgb}{0.13,0.13,1}
+\definecolor{greencomments}{rgb}{0,0.5,0}
+\definecolor{redstrings}{rgb}{0.9,0,0}
+\lstset{
+	frame=single,
+	%numbers=left,
+	%numberstyle=\ttfamily\tiny,
+	extendedchars=true,
+	breaklines=true,
+	tabsize=3,
+	showtabs=false,
+	showspaces=false,
+	basicstyle=\ttfamily\small,
+	commentstyle=\color{greencomments},
+	keywordstyle=\color{bluekeywords}\bfseries,
+	stringstyle=\color{redstrings}
+} 
+
 %
 %	EOF
 %
