--- a/06_appendix.tex
+++ b/06_appendix.tex
@@ -53,6 +53,53 @@ The programs written in declarative programming languages are often shorter than
 \par
 System Dynamics (SD) is a common dynamic modelling paradigm within the ecological and environmental research communities. A SD model consists of compartments (stocks, levels, storages) connected by flows, with subsidiary variables for representing parameters and intermediate variables, and influence arrows to show which compartments and variables are used in the calculation of flows and other variables. Essentially, SD is a cosmetic language for defining differential- or difference-equation models: differential equations if the equations are taken to define continuous change; difference equations if the time step is taken to be unity [05]. %TODO quote
 
+\section{Grammar of the first DSL draft}
+\par
+The first DSL draft had the goal to be able to represent the Similie Bank Tutorial \autocite{dsl:similie_tutorial_bank} textually. Its grammar looked like the following:
+\begin{lstlisting}
+Model:
+Model_Description;
+
+Model_Description :
+'Model' name=ID ':'    Declaration+=Declaration*;
+
+Declaration:
+Definition |    Conjunction
+
+Definition:
+Container |    Variable |    Flow ;
+
+Container:
+'Container' Type_def name=ID '=' exp=Expression ';' ;
+
+Variable:
+'Variable' Type_def name=ID '=' exp=Expression ';' ;
+
+Flow:
+'FlowIN' Type_def name=ID 'IN' name2=Container '=' exp=Expression ';' |
+'FlowOUT' Type_def name=ID 'FROM' name2=Container '=' exp=Expression ';' ;
+
+Conjunction:
+'Conjunction' from=ID '--' to=ID ';' ;
+
+Type_def:
+typedef=ID ;
+
+Expression :
+Addition;
+
+Addition returns Expression:
+Multiplication (({Plus.left=current} '+' | {Minus.left=current} '-') right=Multiplication)*;
+
+Multiplication returns Expression:
+PrimaryExpression (({Multi.left=current} '*' | {Div.left=current} '/') right=PrimaryExpression)*;
+
+PrimaryExpression returns Expression:
+'(' Expression ')' |    {NumberLiteral} value=NUMBER ;
+
+terminal NUMBER returns ecore::EBigDecimal:
+('0'..'9')* ('.' ('0'..'9')+)?;
+\end{lstlisting}
 
 
 
