adding lib refs for chapter 4.2

--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -374,7 +374,70 @@ URL = {sweet.jpl.nasa.gov/guide.doc}
 	url={http://qudt.org}
 }
 
+@MISC{ontology:oom_mapping,
+    author = {Ioannis N. Athanasiadis and O Villa and Andrea-emilio Rizzoli},
+    title = {Enabling knowledge-based software engineering through semantic-object-relational mappings},
+    year = {}
+}
 
+@inproceedings{ontology:owl-mapping,
+    address = {Banff, Alberta, Canada},
+    author = {Kalyanpur, Aditya and Pastor, Daniel J. and Battle, Steve and Padget, Julian A.},
+    booktitle = {Proceedings of the 16th Int'l Conference on Software Engineering {\&} Knowledge Engineering (SEKE'2004)},
+    citeulike-article-id = {4158111},
+    citeulike-linkout-0 = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.9.9020},
+    editor = {Maurer, Frank and Ruhe, G\"{u}nther},
+    journal = {Software Engeering and Knowledge Engeering (SEKE'20004)},
+    keywords = {java, jena, rdf, sesame},
+    location = {Banff, Alberta, Canada},
+    month = jun,
+    pages = {98--103},
+    posted-at = {2009-03-10 10:24:43},
+    priority = {1},
+    title = {{Automatic Mapping of OWL Ontologies into Java}},
+    url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.9.9020},
+    year = {2004}
+}
 
+@article{ontology:onto_in_dsl_dev,
+  author    = {Ines Ceh and
+               Matej Crepinsek and
+               Tomaz Kosar and
+               Marjan Mernik},
+  title     = {Ontology driven development of domain-specific languages},
+  journal   = {Comput. Sci. Inf. Syst.},
+  volume    = {8},
+  number    = {2},
+  year      = {2011},
+  pages     = {317-342},
+  ee        = {http://dx.doi.org/10.2298/CSIS101231019C},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@inproceedings{ontology:ontology2dsl,
+    author = {Ceh, Ines; Crepinsek, Matej; Kosar, Tomaz;Mernik, Marjan;Henriques, Pedro;Pereira,Maria João;Cruz, Daniela;Oliveira, Nuno},
+    booktitle = {INForum'11 --- Simpósio de Informática (CoRTA'11 track)},
+    journal = {INForum'11},
+    title = {{Tool-supported building of DSLs from OWL ontologies}},
+    url = {http://inforum.org.pt/INForum2010/papers/compiladores-e-linguagens-de-programacao/Paper056.pdf},
+    year = {2011}
+}
+
+@inproceedings{ontology:combining_dsl_onto,
+    author = {CWalter, T.},
+    booktitle = {Proceedings of the Doctoral Symposium at MODELS 2009},
+    journal = {MODELS 2009},
+    title = {{Tool-supported building of DSLs from OWL ontologies}},
+    url = {2009},
+    year = {2009}
+}
+
+@INPROCEEDINGS{ontology:ocelet, 
+author={Curé, O. and Forax, R. and Degenne, P. and Seen, D.L. and Parigot, D. and Lahcen, A.A.}, 
+booktitle={Communication Theory, Reliability, and Quality of Service (CTRQ), 2010 Third International Conference on}, title={Ocelet: An Ontology-Based Domain Specific Language to Model Complex Domains}, 
+year={2010}, 
+pages={255-260}, 
+keywords={Application software;Assembly;DSL;Domain specific languages;Graphical user interfaces;Model driven engineering;Ontologies;Programming;Quality of service;Reliability theory;DSL;Models;Ocelet;Ontologies;reasoning}, 
+doi={10.1109/CTRQ.2010.50},}
 
 
