adding lib refs for appednix defintions

--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -121,12 +121,6 @@
 	url={http://www.earthsystemmodeling.org/esmf_releases/non_public/ESMF_3_1_0p1/ESMF_refdoc/node2.html}
 }
 
-@online{dsl:esmf-superstructure,
-	title={ESMF Superstructure},
-  	author={Team ESMF},
-	urldate={2013-02-27},
-	url={http://www.earthsystemmodeling.org/esmf_releases/non_public/ESMF_3_1_0p1/ESMF_refdoc/node2.html}
-}
 
 @Unpublished{dsl:esmf-noaa,
 	title = {NOAA Environmental Software Infrastructure and Interoperability Program},
@@ -440,4 +434,21 @@ pages={255-260},
 keywords={Application software;Assembly;DSL;Domain specific languages;Graphical user interfaces;Model driven engineering;Ontologies;Programming;Quality of service;Reliability theory;DSL;Models;Ocelet;Ontologies;reasoning}, 
 doi={10.1109/CTRQ.2010.50},}
 
+@Manual{appendix:dsl,
+	title = {Domänenspezifische Sprachen},
+	author= {},
+	year = 2007
+}
 
+@Manual{appendix:ontology,
+	title = {Einführung in Ontologie},
+	author= {Gregor Pickert,
+	url=http://www.dbis.informatik.hu-berlin.de/dbisold/lehre/WS0203/SemWeb/artikel/2/Pickert_Ontologien_final.pdf
+}
+
+@online{appendix:declarative_programming,
+	title={Deklarative Programmierung},
+	author={Wikipedia},
+	urldate={2013-04-20},
+	url={http://de.wikipedia.org/wiki/Deklarative_Programmierung}
+}
