adding lib refs for appendix

--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -452,3 +452,10 @@ doi={10.1109/CTRQ.2010.50},}
 	urldate={2013-04-20},
 	url={http://de.wikipedia.org/wiki/Deklarative_Programmierung}
 }
+
+@online{appendix:model_paradigm,
+	title={Simulistics Web Page},
+	author={},
+	urldate={2013-04-20},
+	url={http://www.simulistics.com}
+}
