adding missing lib ref in appendix, spelling correction

--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -179,7 +179,7 @@
 	title = {A Graphical Development Tool for Earth System Model Using Component Description Language},
 	year = 2012,
 	publisher = {IARIA},
-	author = {Chao Tan and Sujun Cheng and Zhongzhi Luan and Si Ye and Wenjun Li andDepei Qian}
+	author = {Chao Tan and Sujun Cheng and Zhongzhi Luan and Si Ye and Wenjun Li and Depei Qian}
 }
 
 @online{dsl:esmf-coupling,
@@ -458,4 +458,11 @@ doi={10.1109/CTRQ.2010.50},}
 	author={},
 	urldate={2013-04-20},
 	url={http://www.simulistics.com}
+}
+
+@online{appendix:hawkins,
+	title={Declarative programming language simplifies hardware design},
+	author={Tom Hawkins},
+	urldate={2013-04-20},
+	url={http://www.eetimes.com/design/communications-design/4139364/Declarative-programming-language-simplifies-hardware-design}
 }
