--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -232,7 +232,7 @@
 
 @online{dsl:simile-simulistics,
 	title={Simulistics},
-	author={Simulistics},
+	author={Simulistics Ltd},
 	urldate={2013-04-19},
 	url={http://www.simulistics.com/}
 }
@@ -249,7 +249,7 @@
 
 @online{dsl:simile-simulistics,
 	title={Modelling approaches},
-	author={Simulistics},
+	author={Simulistics Ltd},
 	urldate={2013-04-19},
 	url={http://www.simulistics.com/tour/paradigms.htm}
 }
@@ -454,10 +454,10 @@ doi={10.1109/CTRQ.2010.50},}
 }
 
 @online{appendix:model_paradigm,
-	title={Simulistics Web Page},
-	author={},
+	title={System Dynamics},
+	author={Simulistics Ltd},
 	urldate={2013-04-20},
-	url={http://www.simulistics.com}
+	url={http://www.simulistics.com/tour/systemdynamics.htm}
 }
 
 @online{appendix:hawkins,
