--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -421,7 +421,7 @@ URL = {sweet.jpl.nasa.gov/guide.doc}
     author = {CWalter, T.},
     booktitle = {Proceedings of the Doctoral Symposium at MODELS 2009},
     journal = {MODELS 2009},
-    title = {{Tool-supported building of DSLs from OWL ontologies}},
+    title = {Tool-supported building of DSLs from OWL ontologies},
     url = {2009},
     year = {2009}
 }
@@ -442,8 +442,8 @@ doi={10.1109/CTRQ.2010.50},}
 
 @Manual{appendix:ontology,
 	title = {Einführung in Ontologie},
-	author= {Gregor Pickert,
-	url=http://www.dbis.informatik.hu-berlin.de/dbisold/lehre/WS0203/SemWeb/artikel/2/Pickert_Ontologien_final.pdf
+	author= {Gregor Pickert},
+	url={http://www.dbis.informatik.hu-berlin.de/dbisold/lehre/WS0203/SemWeb/artikel/2/Pickert_Ontologien_final.pdf}
 }
 
 @online{appendix:declarative_programming,
