added quotations to appendix

--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -434,10 +434,11 @@ pages={255-260},
 keywords={Application software;Assembly;DSL;Domain specific languages;Graphical user interfaces;Model driven engineering;Ontologies;Programming;Quality of service;Reliability theory;DSL;Models;Ocelet;Ontologies;reasoning}, 
 doi={10.1109/CTRQ.2010.50},}
 
-@Manual{appendix:dsl,
+@Article{appendix:dsl,
 	title = {Domänenspezifische Sprachen},
-	author= {},
-	year = 2007
+	author = {LPZ E-BUSINESS | IT-RADAR},
+	journal = {LPZ-RADAR.DE},
+	year = {2007}
 }
 
 @Manual{appendix:ontology,
