added package nameref

--- a/header.tex
+++ b/header.tex
@@ -153,6 +153,10 @@ includehead,includefoot
 	stringstyle=\color{redstrings}
 } 
 
+%-----Namen in Referenzen---
+\usepackage{nameref}
+
+
 %
 %	EOF
 %
