--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -467,3 +467,22 @@ doi={10.1109/CTRQ.2010.50},}
 	urldate={2013-04-20},
 	url={http://www.eetimes.com/design/communications-design/4139364/Declarative-programming-language-simplifies-hardware-design}
 }
+
+@Book{dsl:mda},
+	title = {Model Driven Architecture},
+	year = {2006},
+	publisher = {Dpunkt}
+	author = {Roland Petrasch and Oliver Meimberg}
+}
+
+
+
+
+
+
+
+
+
+
+
+
