--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -468,7 +468,7 @@ doi={10.1109/CTRQ.2010.50},}
 	url={http://www.eetimes.com/design/communications-design/4139364/Declarative-programming-language-simplifies-hardware-design}
 }
 
-@Book{dsl:mda},
+@Book{dsl:mda,
 	title = {Model Driven Architecture},
 	year = {2006},
 	publisher = {Dpunkt}
