solved some bib problems

--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -409,7 +409,7 @@ URL = {sweet.jpl.nasa.gov/guide.doc}
 }
 
 @inproceedings{ontology:ontology2dsl,
-    author = {Ceh, Ines; Crepinsek, Matej; Kosar, Tomaz;Mernik, Marjan;Henriques, Pedro;Pereira,Maria João;Cruz, Daniela;Oliveira, Nuno},
+    author = {Ceh, Ines and Crepinsek, Matej and Kosar, Tomaz and Mernik, Marjan and Henriques, Pedro and Pereira,Maria João and Cruz, Daniela and Oliveira, Nuno},
     booktitle = {INForum'11 --- Simpósio de Informática (CoRTA'11 track)},
     journal = {INForum'11},
     title = {{Tool-supported building of DSLs from OWL ontologies}},
@@ -471,7 +471,7 @@ doi={10.1109/CTRQ.2010.50},}
 @Book{dsl:mda,
 	title = {Model Driven Architecture},
 	year = {2006},
-	publisher = {Dpunkt}
+	publisher = {Dpunkt},
 	author = {Roland Petrasch and Oliver Meimberg}
 }
 
