--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -105,6 +105,14 @@
 	year={2013}
 }
 
+@online{dsl:protege,
+	title={Protege Homepage},
+  	author={National Institute of General Medical Sciences},
+	urldate={2013-02-14},
+	url={http://protege.stanford.edu/},
+	year={2013}
+}
+
 
 @InCollection{dsl:esmf-tutorial1,
 	title = {ESMF Early Adopters ``Tutorial Examples''},
@@ -121,12 +129,6 @@
 	url={http://www.earthsystemmodeling.org/esmf_releases/non_public/ESMF_3_1_0p1/ESMF_refdoc/node2.html}
 }
 
-
-@Unpublished{dsl:esmf-noaa,
-	title = {NOAA Environmental Software Infrastructure and Interoperability Program},
-	author = {Cecelia DeLuca and Sylvia Murphy and V. Balaj},
-	year = 2009
-}
 
 @Manual{dsl:esmf-tutorial2,
 	title = {Introduction to the Earth System Modeling Framework},
@@ -148,12 +150,6 @@
 	url={http://www.earthsystemmodeling.org/esmf_releases/last/regridding_status.html},
 }
 
-@online{dsl:esmf-ncl_regridding,
-	title={Script templates for NCL regridding and graphics},
-  	author={Team NCAR Command Language},
-	urldate={2013-03-14},
-	url={http://www.ncl.ucar.edu/Applications/Templates/},
-}
 
 @article{dsl:esmf-fortran,
 	  added-at = {2007-11-27T00:00:00.000+0100},
